# tink-cc

./: .bazelrc  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  tink_cc_deps.bzl  tink_cc_deps_init.bzl  version.bzl
examples/: .bazelrc  CMakeLists.txt  MODULE.bazel  WORKSPACE
examples/aead/: BUILD.bazel  CMakeLists.txt  aead_cli.cc
examples/daead/: BUILD.bazel  CMakeLists.txt  deterministic_aead_cli.cc
examples/digital_signatures/: BUILD.bazel  CMakeLists.txt  README.md  digital_signatures_cli.cc
examples/helloworld/: BUILD.bazel
examples/hybrid_encryption/: BUILD.bazel  CMakeLists.txt  README.md  hybrid_cli.cc
examples/jwt/: BUILD.bazel  CMakeLists.txt  jwt_generate_public_jwk_set.cc  jwt_sign.cc  jwt_verify.cc
examples/key_derivation/: BUILD.bazel  CMakeLists.txt  key_derivation_cli.cc
examples/mac/: BUILD.bazel  CMakeLists.txt  mac_cli.cc
examples/util/: BUILD.bazel  util.cc  util.h
examples/walkthrough/: BUILD.bazel  create_keyset.cc  create_keyset.h  create_keyset_test.cc  load_cleartext_keyset.cc  load_cleartext_keyset.h  load_cleartext_keyset_test.cc  load_encrypted_keyset.cc  load_encrypted_keyset.h  load_encrypted_keyset_test.cc  obtain_and_use_a_primitive.cc  obtain_and_use_a_primitive.h  obtain_and_use_a_primitive_test.cc  test_util.cc  test_util.h  write_cleartext_keyset.cc  write_cleartext_keyset.h  write_cleartext_keyset_test.cc  write_keyset.cc  write_keyset.h  write_keyset_test.cc
testvectors/: BUILD.bazel  build_defs.bzl
tink/: BUILD.bazel  CMakeLists.txt  aead.h  annotations.h  big_integer.h  binary_keyset_reader.h  binary_keyset_writer.h  chunked_mac.h  cleartext_keyset_handle.h  configuration.h  crypto_format.h  deterministic_aead.h  hybrid_decrypt.h  hybrid_encrypt.h  input_stream.h  json_keyset_reader.h  json_keyset_writer.h  key.h  key_gen_configuration.h  key_manager.h  keyset_handle.h  keyset_handle_builder.h  keyset_manager.h  keyset_reader.h  keyset_writer.h  kms_client.h  kms_clients.h  low_level_crypto_access.h  low_level_crypto_access_token.h  mac.h  output_stream.h  output_stream_with_result.h  parameters.h  primitive_set.h  primitive_wrapper.h  proto_keyset_format.cc  proto_keyset_format.h  proto_keyset_format_test.cc  proto_parameters_format.h  public_key_sign.h  (+11 more)
tink/.bcr/: README.md  metadata.template.json
tink/aead/: BUILD.bazel  CMakeLists.txt  aead_benchmarks.cc  aead_config.cc  aead_config.h  aead_config_test.cc  aead_factory.cc  aead_factory.h  aead_key_templates.cc  aead_key_templates.h  aead_key_templates_test.cc  aead_wrapper.cc  aead_wrapper.h  aead_wrapper_test.cc  aes_ctr_hmac_aead_key.cc  aes_ctr_hmac_aead_key.h  aes_ctr_hmac_aead_key_manager.cc  aes_ctr_hmac_aead_key_manager.h  aes_ctr_hmac_aead_key_manager_test.cc  aes_ctr_hmac_aead_key_test.cc  aes_ctr_hmac_aead_parameters.cc  aes_ctr_hmac_aead_parameters.h  aes_ctr_hmac_aead_parameters_test.cc  aes_ctr_hmac_aead_proto_serialization.cc  aes_ctr_hmac_aead_proto_serialization.h  aes_ctr_hmac_aead_proto_serialization_test.cc  aes_eax_key.cc  aes_eax_key.h  aes_eax_key_manager.h  aes_eax_key_manager_test.cc  aes_eax_key_test.cc  aes_eax_parameters.cc  aes_eax_parameters.h  aes_eax_parameters_test.cc  aes_eax_proto_serialization.cc  aes_eax_proto_serialization.h  aes_eax_proto_serialization_test.cc  aes_gcm_key.cc  aes_gcm_key.h  aes_gcm_key_manager.cc  (+96 more)
tink/config/: BUILD.bazel  CMakeLists.txt  config_2026.cc  config_2026.h  config_2026_test.cc  fips_140_2.cc  fips_140_2_test.cc  global_registry.cc  global_registry_test.cc  key_gen_config_2026.cc  key_gen_config_2026.h  key_gen_config_2026_test.cc  key_gen_fips_140_2.cc  key_gen_fips_140_2_test.cc  key_gen_v0.cc  tink_config.cc  tink_config.h  tink_config_test.cc  tink_fips.cc  tink_fips.h  tink_fips_test.cc  v0.cc  v0.h  v0_test.cc
tink/core/: big_integer.cc  big_integer_test.cc  binary_keyset_reader.cc  binary_keyset_reader_test.cc  binary_keyset_writer.cc  binary_keyset_writer_test.cc  cleartext_keyset_handle.cc  cleartext_keyset_handle_test.cc  crypto_format.cc  crypto_format_test.cc  json_keyset_reader.cc  json_keyset_reader_test.cc  key_access_test.cc  key_manager.cc  key_manager_impl.h  key_manager_impl_test.cc  key_manager_test.cc  key_type_manager.h  key_type_manager_test.cc  keyset_handle.cc  keyset_handle_builder.cc  keyset_handle_builder_test.cc  keyset_handle_test.cc  keyset_manager.cc  keyset_manager_test.cc  kms_clients.cc  kms_clients_test.cc  low_level_crypto_access_token_test.cc  primitive_set_test.cc  private_key_manager_impl.h  private_key_manager_impl_test.cc  private_key_type_manager.h  proto_keyset_format.cc  proto_keyset_format_test.cc  proto_parameters_format.cc  proto_parameters_format_test.cc  restricted_big_integer.cc  restricted_big_integer_test.cc  restricted_data.cc  restricted_data_test.cc  (+2 more)
tink/daead/: BUILD.bazel  CMakeLists.txt  aes_siv_key.cc  aes_siv_key.h  aes_siv_key_manager.h  aes_siv_key_manager_test.cc  aes_siv_key_test.cc  aes_siv_parameters.cc  aes_siv_parameters.h  aes_siv_parameters_test.cc  aes_siv_proto_serialization.cc  aes_siv_proto_serialization.h  aes_siv_proto_serialization_test.cc  config_2026.cc  config_2026.h  config_2026_test.cc  config_v0.cc  config_v0.h  config_v0_test.cc  deterministic_aead_config.cc  deterministic_aead_config.h  deterministic_aead_config_test.cc  deterministic_aead_factory.cc  deterministic_aead_key_templates_test.cc  deterministic_aead_wrapper.cc  deterministic_aead_wrapper.h  deterministic_aead_wrapper_test.cc  failing_daead.cc  failing_daead_test.cc  key_gen_config_2026.cc  key_gen_config_2026.h  key_gen_config_v0.cc
tink/hybrid/: BUILD.bazel  CMakeLists.txt  config_2026.cc  config_2026.h  config_2026_test.cc  config_v0.cc  config_v0.h  config_v0_test.cc  ecies_aead_hkdf_dem_helper.cc  ecies_aead_hkdf_hybrid_decrypt.cc  ecies_aead_hkdf_hybrid_decrypt.h  ecies_aead_hkdf_hybrid_decrypt_test.cc  ecies_aead_hkdf_hybrid_encrypt.cc  ecies_aead_hkdf_hybrid_encrypt.h  ecies_parameters.cc  (+51 more)
tools/: BUILD.bazel  update_build_files_for_tink_2_0_bazel.sh  update_build_files_for_tink_2_0_bazel_test.sh
(+1611 files in other folders)
