"""Module definition for Tink C++ Examples."""

# Omitting `version` because this is not meant to be depended on by other modules.
module(name = "tink_cc_examples")

# Use local tink_cc.
bazel_dep(
    name = "tink_cc",
    version = "",
)
local_path_override(
    module_name = "tink_cc",
    path = "../",
)

bazel_dep(
    name = "rules_cc",
    version = "0.2.16",
)
bazel_dep(
    name = "googletest",
    version = "1.17.0",
)
bazel_dep(
    name = "abseil-cpp",
    version = "20250814.1",
)
